feat: Creat page Home,About

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <a href="/" >Home Page</a>
+    <a href="/about" >About Page</a>
+
     <div id="app"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
