Cấu trúc lại các file và components

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <a href="/" >Home Page</a>
-    <a href="/about" >About Page</a>
-
+    
+    <div id="header"></div>
     <div id="app"></div>
+    <div id="footer"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
