feat: Create page DashBoard -Generate component Headerdashboard & fill data in DashBoard

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div id="app"></div>
     <div id="footer"></div>
     <script type="module" src="./src/main.js"></script>
+    <img src="" alt="">
   </body>
 </html>
