--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    
+    <textarea ></textarea>
     <div id="header"></div>
     <div id="app"></div>
     <div id="footer"></div>
     <script type="module" src="./src/main.js"></script>
-    <img src="" alt="">
   </body>
 </html>
