--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/bd1ee1ea01.js" crossorigin="anonymous"></script>
     <title>Vite App</title>
   </head>
   <body>
-    <div id="header"></div>
-    <div id="app"></div>
-    <div id="footer"></div>
+      <div id="header"></div>
+      <div id="app" style="margin-top: 63px;"></div>
+      <div id="footer"></div>
     <script type="module" src="./src/main.js"></script>
+    
   </body>
 </html>
